--- a/lkt-box.css
+++ b/lkt-box.css
@@ -5,7 +5,7 @@
     color: var(--text-color);
     box-shadow: var(--box-shadow);
     cursor: default;
-    text-align: center;
+    text-align: var(--box-text-align);
     transition: var(--box-transition);
     font-family: var(--box-font-family);
     font-size: var(--box-font-size);
