--- a/theme/default.css
+++ b/theme/default.css
@@ -1,4 +1,5 @@
-:root {
+.lkt-box {
+    --lkt-box-display: inline-flex;
     --lkt-box-flex-direction: column;
     --lkt-box-flex-direction-content: column;
 
@@ -30,6 +31,8 @@
     --lkt-box-transition: all linear 100ms;
     
     /** Header */
+    --lkt-box--header--display: flex;
+    --lkt-box--header--align-items: center;
     --lkt-box--header--justify-content: flex-start;
     --lkt-box--header--font-weight: 400;
     --lkt-box--header--padding: 15px;
@@ -46,4 +49,9 @@
     --lkt-box--content--border-width: 0;
     --lkt-box--content--border-style: solid;
     --lkt-box--content--border-color: #444444;
+
+    /** Title */
+    --lkt-box--title--display: flex;
+    --lkt-box--title--align-items: flex;
+    --lkt-box--title--gap: 5px;
 }
